# serverless

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf
backend/: cli.py  pyproject.toml
backend/api/: flow_training.py  jobs.py  main.py  pdf.py  reporting.py  sandbox.py  store.py
backend/core/: __init__.py  baselines.py  calibration.py  objective.py  simulator.py  types.py
backend/datagen/: __init__.py  flow.py  poisson.py  train_flow.py  upload.py
backend/tests/: test_api.py  test_baselines.py  test_cli.py  test_fit_flow.py  test_flow.py  test_jobs.py  test_objective.py  test_poisson.py  test_reporting.py  test_runs_listing.py  test_sandbox.py  test_simulator.py  test_sse_stream.py  test_upload.py
backend/weights/: flow_v1.pt  flow_v1_meta.json
backend/worker/: runner.py
examples/: optimizer_de.py  sample_trace.csv  user_optimizer_de.py  user_optimizer_grid.py  user_optimizer_random.py  user_optimizer_sa.py  user_optimizer_super.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: CatSprite.tsx  ContainerStateCounters.tsx  ContainerTimeline.tsx  ConvergenceChart.tsx  HelpIcon.tsx  ObjectiveBreakdown.tsx  catAnimations.ts
frontend/src/hooks/: useRunStream.ts
frontend/src/pages/: Docs.tsx  Landing.tsx  Report.tsx  Running.tsx  Upload.tsx
