[project]
name = "serverless-blackbox"
version = "0.1.0"
description = "G/G/k/k serverless benchmarking black-box with web UI."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    # Pre-installed in the sandbox so user-uploaded optimizers can import them.
    # See Docs §5/§7 (the contract promises these). The sandbox child process
    # runs as ``sys.executable`` of the API, so they must live in the same
    # interpreter's site-packages — hence base deps, not an extra.
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "optuna>=3.6",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.9",
    "reportlab>=4.0",
]
datagen = [
    "probaforms>=0.1",
    "torch>=2.2",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers -m 'not slow'"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: tests that train a flow / spawn subprocesses (opt-in via -m slow)",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "datagen*", "api*", "worker*"]
